# simple-probability-framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/: densities.h  derivatives.h  distribution.h  expression.h  param.h  spf.h  spferr.h
src/: CMakeLists.txt  densities.c  derivatives.c  distribution.c  driver.c  expression.c  param.c  spferr.c
